experimental/ir/testdata/fields/maps/extension.proto.stderr.txt
error: unsupported map-typed extension
  --> testdata/fields/maps/extension.proto:24:5
   |
24 |     map<int32, int32> m = 1;
   |     ^^^^^^^^^^^^^^^^^ declared here
   |
   = help: extensions cannot be map-typed; instead, define a message type with a
           map-typed field

encountered 1 error
